@@ -30,6 +30,7 @@
 - NEW: The diff command is available in the explorer context menu
        for folders with property modifications. (Stefan)
 - NEW: Repository browser shows svn:externals as sub-trees. (Stefan Fuhrmann)
+- NEW: Improved filter in the log dialog. (Stefan)
 
 Version 1.6.5
 - BUG: fixed access to freed memory which could crash
